# cnaas-nms-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/cnaas_cli/: __init__.py  __main__.py  client.py  config.py  errors.py  main.py  output.py
src/cnaas_cli/commands/: __init__.py  auth.py  devices.py  firmware.py  groups.py  interfaces.py  jobs.py  linknets.py  mgmtdomains.py  repository.py  settings.py  system.py
tests/: conftest.py  test_auth.py  test_config.py  test_devices.py  test_errors.py  test_firmware.py  test_groups.py  test_interfaces.py  test_jobs.py  test_linknets.py  test_main.py  test_mgmtdomains.py  test_repository.py  test_settings.py  test_system.py
